# gclparser

./: .ghci  .gitignore  GCL.cabal  GCLparser.cabal  LICENSE  README.md
docs/: aboutInstallingZ3.md  papers.md  syntax.md
examples/: E.gcl  S1.gcl  even.gcl  min.gcl  minind.gcl  quicksort.gcl  readme.md  reftest.gcl  reverse.gcl  swap.gcl  test.gcl
examples/benchmark/: bsort.gcl  divByN.gcl  find12.gcl  invalidBsort.gcl  invalidFind12.gcl  invalidMemberOf.gcl  invalidMin.gcl  memberOf.gcl  min.gcl  pullUp.gcl  stressDivByN.gcl  stressPullUp.gcl  wrongMemberOf.gcl
examples/benchmark/mutants/bsort/: bsort_M0_ROR_LT_LTE.gcl  bsort_M10_AOR_MINUS_ROTATE.gcl  bsort_M11_AOR_MINUS_PLUS.gcl  bsort_M12_AOR_MINUS_DROP_RIGHT.gcl  bsort_M13_AOR_MINUS_ROTATE.gcl  bsort_M14_AOR_MINUS_PLUS.gcl  bsort_M15_AOR_MINUS_DROP_RIGHT.gcl  bsort_M16_AOR_MINUS_ROTATE.gcl  bsort_M17_AOR_MINUS_PLUS.gcl  bsort_M18_AOR_MINUS_DROP_RIGHT.gcl  bsort_M19_AOR_MINUS_ROTATE.gcl  bsort_M1_ROR_LT_GT.gcl  bsort_M20_AOR_MINUS_PLUS.gcl  bsort_M21_AOR_PLUS_DROP_LEFT.gcl  bsort_M22_AOR_PLUS_DROP_RIGHT.gcl  bsort_M23_AOR_PLUS_MINUS.gcl  bsort_M2_AOR_MINUS_DROP_RIGHT.gcl  bsort_M3_AOR_MINUS_ROTATE.gcl  bsort_M4_AOR_MINUS_PLUS.gcl  bsort_M5_ROR_LT_LTE.gcl  bsort_M6_ROR_LT_GT.gcl  bsort_M7_ROR_LT_LTE.gcl  bsort_M8_ROR_LT_GT.gcl  bsort_M9_AOR_MINUS_DROP_RIGHT.gcl
examples/benchmark/mutants/divByN/: divByN_M0_LOR_AND_DROP_RIGHT.gcl  divByN_M10_AOR_PLUS_MINUS.gcl  divByN_M11_EOR_EQUAL_NEGATE.gcl  divByN_M12_AOR_TIMES_DROP_LEFT.gcl  divByN_M13_AOR_TIMES_DROP_RIGHT.gcl  divByN_M14_AOR_PLUS_DROP_LEFT.gcl  divByN_M15_AOR_PLUS_DROP_RIGHT.gcl  divByN_M16_AOR_PLUS_MINUS.gcl  divByN_M1_LOR_AND_DROP_LEFT.gcl  divByN_M2_LOR_AND_OR.gcl  divByN_M3_ROR_LTE_LT.gcl  divByN_M4_ROR_LTE_GTE.gcl  divByN_M5_NOT_DROP.gcl  divByN_M6_ROR_LT_LTE.gcl  divByN_M7_ROR_LT_GT.gcl  divByN_M8_AOR_PLUS_DROP_LEFT.gcl  divByN_M9_AOR_PLUS_DROP_RIGHT.gcl
examples/benchmark/mutants/find12/: find12_M0_LOR_AND_DROP_RIGHT.gcl  find12_M10_EOR_EQUAL_NEGATE.gcl  find12_M11_TRYCATCH_DROP_CATCH.gcl  find12_M12_AOR_PLUS_DROP_LEFT.gcl  find12_M13_AOR_PLUS_DROP_RIGHT.gcl  find12_M14_AOR_PLUS_MINUS.gcl  find12_M15_AOR_PLUS_DROP_LEFT.gcl  find12_M16_AOR_PLUS_DROP_RIGHT.gcl  find12_M17_AOR_PLUS_MINUS.gcl  find12_M18_EOR_EQUAL_NEGATE.gcl  find12_M19_TRYCATCH_DROP_CATCH.gcl  find12_M1_LOR_AND_DROP_LEFT.gcl  find12_M20_AOR_DIV_DROP_RIGHT.gcl  find12_M21_AOR_DIV_ROTATE.gcl  find12_M22_EOR_EQUAL_NEGATE.gcl  find12_M23_ITE_DROP_ELSE.gcl  find12_M24_LOR_AND_DROP_RIGHT.gcl  find12_M25_LOR_AND_DROP_LEFT.gcl  find12_M26_LOR_AND_OR.gcl  find12_M27_ROR_LT_LTE.gcl  find12_M28_ROR_LT_GT.gcl  find12_M29_ROR_LT_LTE.gcl  find12_M2_LOR_AND_OR.gcl  find12_M30_ROR_LT_GT.gcl  find12_M31_AOR_PLUS_DROP_LEFT.gcl  find12_M32_AOR_PLUS_DROP_RIGHT.gcl  find12_M33_AOR_PLUS_MINUS.gcl  find12_M3_ROR_LT_LTE.gcl  find12_M4_ROR_LT_GT.gcl  find12_M5_LOR_OR_DROP_RIGHT.gcl  find12_M6_LOR_OR_DROP_LEFT.gcl  find12_M7_LOR_OR_AND.gcl  find12_M8_ROR_LT_LTE.gcl  find12_M9_ROR_LT_GT.gcl
examples/benchmark/mutants/memberOf/: memberOf_M0_ROR_LT_LTE.gcl  memberOf_M1_ROR_LT_GT.gcl  memberOf_M2_EOR_EQUAL_NEGATE.gcl  memberOf_M3_AOR_PLUS_DROP_LEFT.gcl  memberOf_M4_AOR_PLUS_DROP_RIGHT.gcl  (+1 more)
examples/examplesHaskellZ3/: TestZ3_from_website.hs  TestZ3_simple.hs  TestZ3_test1.hs  TestZ3_test2.hs  Z3ProverExample.hs  readme.txt
src/: ExamplesOfSemanticFunction.hs  GCLInterpreter.hs  GCLUtils.hs  GenerateMutantsForBenchMark.hs  Main.hs  MuGCL.hs
src/GCLLexer/: Lexer.x  Token.hs
src/GCLParser/: GCLAlgebra.hs  GCLDatatype.hs  Parser.y  PrettyPrint.hs
src/Lexing/: Lexer.x  Token.hs
src/Parsing/: GCL.hs  Parser.y
(+41 files in other folders)
