name:                GCLparser
version:             0.1.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stefan Koppier, Wishnu Prasetya
-- maintainer:          s.koppier@students.uu.nl
-- copyright:           
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable MyGCLp
  main-is:             Main.hs
  other-modules:       Lexing.Token
                     , Lexing.Lexer
                     , Parsing.GCL
                     , Parsing.Parser
--                     , PrettyPrint
  -- other-extensions:    
  build-depends:       base   >= 4.10 
                     , array
                     , containers
                     , optparse-applicative
                     , pretty
  hs-source-dirs:      src
  build-tools:         happy, alex
  default-language:    Haskell2010
  GHC-Options:         -Wall
  default-extensions:  TupleSections
                     , NamedFieldPuns