name:                GCLparser
version:             0.2.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Koppier, Wishnu Prasetya
-- maintainer:          s.koppier@students.uu.nl
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  exposed-modules:     GCLParser.Parser
                     , GCLParser.GCLDatatype
                     , GCLParser.PrettyPrint
                     , GCLInterpreter
                     , MuGCL
                     , GCLUtils
                     , GCLLexer.Token
                     , GCLLexer.Lexer
                     , ExamplesOfSemanticFunction
  -- other-extensions:
  build-depends:       base   >= 4.10
                     , array
                     , containers
                     , optparse-applicative
                     , pretty
                     , directory
  hs-source-dirs:      src
  -- location to z3 bin and lib:
  extra-lib-dirs:      ~/workshop/tools/z3-4.8.8/bin
  extra-include-dirs:  ~/workshop/tools/z3-4.8.8/bin
  build-tools:         happy, alex
  default-language:    Haskell2010
  GHC-Options:         -Wall
  default-extensions:  TupleSections
                     , NamedFieldPuns
